# lv_demos

./: .gitignore  CMakeLists.txt  README.md  library.json  library.properties  lv_demo.mk  lv_demos_ext.h
src/: lv_demos.h
src/high_res/: adc.c  button.c  clock.c  lv_demo_high_res_api_example.c  lv_demo_high_res_app_edgeai.c  lv_demo_high_res_home.c  lv_demo_high_res_private.h  lv_demo_high_res_util.c  mqtt_sub.c
src/smartwatch/: lv_demo_smartwatch.c  lv_demo_smartwatch.h  lv_demo_smartwatch_control.c  lv_demo_smartwatch_health.c  lv_demo_smartwatch_music.c  lv_demo_smartwatch_private.h  lv_demo_smartwatch_sports.c  lv_demo_smartwatch_weather.c
